--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,21 @@
 <app-header></app-header>
+
+<main>
+  <ul id="users">
+    @for (user of users; track user.id) {
+    <li>
+      <app-user
+        [user]="user"
+        [selected]="user.id === selectUserId()"
+        (select)="onUserSelected($event)"
+      />
+    </li>
+    }
+  </ul>
+
+  @if (selectUserId() && selectedUser()) {
+  <app-tasks [userId]="selectedUser()!.id" [name]="selectedUser()!.name" />
+  } @else {
+  <p id="fallback">Select a user to see their tasks!</p>
+  }
+</main>
